Dark Mode set / mobile responsive fix

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -221,6 +221,10 @@ header {
   header {
     background: var(--header-color);
   }
+  #menu-fixed {
+    margin-top: 15px;
+    padding: 0 15px;
+  }
   #navigation {
     width: 100%;
   }
